# Ruzzer

./: .gitignore  README.md
ruzzer-project/: Cargo.toml
ruzzer-project/src/: arguments.rs  main.rs  output.rs  requests.rs  results.rs  wordlist.rs
