[package]
name = "ruzzer"
version = "0.1.0"
authors = ["akaBase"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargocargo-tree/reference/manifest.html

[dependencies]
http = "0.2.8"
ansi_term = "0.12.1"
rand = "0.8.5"
reqwest = "0.11.10"
futures = "0.3.21"
tokio = {version = "1.19.2", features = ["full"]}
lazy_static = "1.4.0"
chrono = "0.4.19"